Fix overlapping buttons in add child to group

--- a/src/app/modules/administrator/page/groups/add-child-to-group/add-child-to-group.component.scss
+++ b/src/app/modules/administrator/page/groups/add-child-to-group/add-child-to-group.component.scss
@@ -7,7 +7,11 @@
   }
 
   .actions {
-    margin-top: 5%;
-    margin-left: 85%;
+    display: flex;
+    justify-content: flex-end;
+
+    .button {
+      margin-left: 8px;
+    }
   }
 }
